Fix: Adding overflow auto to flipcard item face to allow scrollable content when larger than box size (ADAPT-12396) (#77)

--- a/less/flipcard.less
+++ b/less/flipcard.less
@@ -43,6 +43,7 @@
       height: 100%;
       transform-style: preserve-3d;
       transition: transform 1s;
+      overflow: auto;
       width: 100%;
 
       &.flipcard__item-front .flipcard__item-frontImage {
